[package]
name = "bmemcached-async"
version = "0.5.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>","Adil H"]
description = "(Async) Memcached binary protocol in pure rust with support for 'pools' and consistent hashing. (For now minor versions will break API until v1 is released)"
homepage = "https://github.com/didil/bmemcached-rs-async"
repository = "https://github.com/didil/bmemcached-rs-async"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
bitflags = "1.0.3"
byteorder = "1.1.0"
conhash = "0.4.0"
error-chain = "0.12.0"
enum_primitive = "0.1.0"
log = "0.4.3"
num = "0.2.0"
async-std = { version = "1.2.0" , features = ["attributes"] }
async-trait = "0.1.18"

[dev-dependencies]
criterion = "0.2.4"
env_logger = "0.5.11"
serde = "1.0.70"
serde_derive= "1.0.70"
serde_json = "1.0.24"

[[bench]]
name = "regression"
harness = false
